<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sandy_nude"
    tools:context=".MovieInfoFragment">

    <LinearLayout
        android:id="@+id/ll_movie_info_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_movie_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="@font/oswald"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/iv_movie_info_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"
            android:transitionName="sharedImage"/>





            <LinearLayout
                android:id="@+id/ll_movie_info_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_movie_info_type_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald"

                    android:text="@string/tv_movie_info_type_header"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_movie_info_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald"
                    android:text="@string/tv_movie_info_default_type"
                    android:textSize="16sp"/>

            </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_movie_info_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_movie_info_year_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald"
                android:text="@string/tv_movie_info_year_header"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_movie_info_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald"
                android:text="@string/tv_movie_info_default_year"
                android:textSize="16sp"/>
        </LinearLayout>




        <LinearLayout
            android:id="@+id/ll_movie_info_imdb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_movie_info_imdb_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald"
                android:text="@string/tv_movie_info_imdb_header"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_movie_info_imdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald"
                android:text="@string/tv_movie_info_default_imdb"
                android:textSize="16sp"/>
        </LinearLayout>

<!--        <VideoView-->
<!--            android:id="@+id/vv_movie_info_trailer"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="150dp"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:transitionName="sharedImage"/>-->
        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/btn_movie_info_back_to_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_movie_info_search_more"
            android:backgroundTint="@color/tangerine_orange"
            android:fontFamily="@font/oswald"
            />



    </LinearLayout>

</LinearLayout>